--- a/content_based.ipynb
+++ b/content_based.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "4  Single-player,Steam Achievements,Full controll...   RPG  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "(56137, 9)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "12808  Action,Free to Play,Strategy  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "game_details     80  0.001425"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
        "developer         0      0.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "27625           Action,Adventure  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
        "27625                         98  Overwhelmingly Positive  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
        "       'Transformice', 'BLOCKADE 3D'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,40 +1340,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "\n",
-    "def train(steam_train):\n",
-    "    tfidf = TfidfVectorizer(analyzer='word',\n",
-    "                            ngram_range=(1, 3),\n",
-    "                            min_df=0,\n",
-    "                            stop_words='english')\n",
-    "    tfidf_matrix = tfidf.fit_transform(steam_train['genre_tags_game_details'])\n",
-    "    cosine_similarities = linear_kernel(tfidf_matrix, tfidf_matrix)\n",
-    "    \n",
-    "    for idx, row in dataframe.iterrows():\n",
-    "        similar_indices = cosine_similarities[idx].argsort()[:-5:-1]\n",
-    "        similar_items = [(steam_train['genre_tags_game_details'][i], cosine_similarities[idx][i])\n",
-    "                        for i in similar_indices]\n",
+    "tf = TfidfVectorizer(analyzer='word', stop_words='english')\n",
+    "tfidf_matrix = tf.fit_transform(steam_train['tags'])\n",
     "\n",
-    "        id = row['genre_tags_game_details']\n",
-    "        similar_items = [it for it in similar_items if it[0] != id]\n",
-    "        # This 'sum' is turns a list of tuples into a single tuple:\n",
-    "        # [(1,2), (3,4)] -> (1,2,3,4)\n",
-    "        flattened = sum(similar_items, ())\n",
-    "        try_print(\"Top 5 recommendations for %s: %s\" % (id, flattened))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train(steam_train)"
+    "cosine_similarities = linear_kernel(tfidf_matrix, tfidf_matrix)\n",
+    "\n",
+    "results = {}"
    ]
   },
   {
@@ -1398,7 +1376,26 @@
     }
    ],
    "source": [
-    "steam_train.columns"
+    "for idx, row in steam_train.iterrows():\n",
+    "    similar_indices = cosine_similarities[idx].argsort()[:-100:-1]\n",
+    "    similar_items = [(cosine_similarities[idx][i], steam_train['id'][i]) for i in similar_indices]\n",
+    "\n",
+    "    results[row['game']] = similar_items[1:]\n",
+    "    \n",
+    "print('done!')\n",
+    "\n",
+    "def item(id):\n",
+    "    return steam_train.loc[steam_train['game'] == game]['tags'].tolist()[0].split(' - ')[0]\n",
+    "\n",
+    "# Just reasteam_train the results out of the dictionary.\n",
+    "def recommend(game, num):\n",
+    "    print(\"Recommending \" + str(num) + \" products similar to \" + game(game) + \"...\")\n",
+    "    print(\"-------\")\n",
+    "    recs = results[game][:num]\n",
+    "    for rec in recs:\n",
+    "        print(\"Recommended: \" + game(rec[1]) + \" (score:\" + str(rec[0]) + \")\")\n",
+    "\n",
+    "recommend(game=11, num=5)"
    ]
   },
   {
